force-app/main/default/objects/Account/fields/Customer_name_field__c.field-meta.xml
<CustomField>
    <fullName>Customer_name_field__c</fullName>
    <label>Customer_name_field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>