force-app/main/default/objects/Account/fields/Platform_Demo_aybQw__c.field-meta.xml
<CustomField>
    <fullName>Platform_Demo_aybQw__c</fullName>
    <label>Platform Demo aybQw</label>
    <length>18</length>
    <type>Text</type>
</CustomField>