force-app/main/default/objects/Account/fields/Platform_Demo_Field1__c.field-meta.xml
<CustomField>
    <fullName>Platform_Demo_Field1__c</fullName>
    <label>Platform Demo Field1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>