force-app/main/default/objects/Account/fields/Platform_Demo_zeV6l__c.field-meta.xml
<CustomField>
    <fullName>Platform_Demo_zeV6l__c</fullName>
    <label>Platform Demo zeV6l</label>
    <length>18</length>
    <type>Text</type>
</CustomField>